バージョンを2.5.14に変更、slickとmysqlへの接続設定

--- a/Twitter/twitter_project/conf/application.conf
+++ b/Twitter/twitter_project/conf/application.conf
@@ -1,11 +1,11 @@
-# https://www.playframework.com/documentation/latest/Configuration
+//https://www.playframework.com/documentation/latest/Configuration
 
 //使用するドライバや接続情報
 //スキーマやユーザーは環境に合わせて変更しよう
-//slick.dbs.default.driver="slick.driver.MySQLDriver$"
-//slick.dbs.default.db.driver="com.mysql.jdbc.Driver"
-//slick.dbs.default.db.url="jdbc:mysql://127.0.0.1:3306/twitter"
-//slick.dbs.default.db.user="root"
-//slick.dbs.default.db.password=""
-//
-//play.evolutions.enabled=true
+slick.dbs.default.driver="slick.driver.MySQLDriver$"
+slick.dbs.default.db.driver="com.mysql.jdbc.Driver"
+slick.dbs.default.db.url="jdbc:mysql://localhost:3306/twitter"
+slick.dbs.default.db.user=root
+slick.dbs.default.db.password=""
+
+play.evolutions.enabled=true
