コネクションの確認作業のためcommit

--- a/Twitter/twitter_project/conf/application.conf
+++ b/Twitter/twitter_project/conf/application.conf
@@ -5,7 +5,24 @@
 slick.dbs.default.driver="slick.driver.MySQLDriver$"
 slick.dbs.default.db.driver="com.mysql.jdbc.Driver"
 slick.dbs.default.db.url="jdbc:mysql://localhost:3306/twitter"
-slick.dbs.default.db.user=root
+slick.dbs.default.db.user="root"
 slick.dbs.default.db.password=""
 
 play.evolutions.enabled=true
+//
+//h2mem1 = {
+//  url = "jdbc:h2:mem:test1"
+//  driver = org.h2.Driver
+//  connectionPool = disabled
+//  keepAliveConnection = true
+//}
+//
+//mydb = {
+//  dataSourceClass = "org.postgresql.ds.PGSimpleDataSource"
+//  properties = {
+//    databaseName = "mydb"
+//    user = "myuser"
+//    password = "secret"
+//  }
+//  numThreads = 10
+//}
